2004-09-30  H.J. Lu  <hongjiu.lu@intel.com>

PR 414
	* elflink.c (_bfd_elf_merge_symbol): Check TLS symbol.